[tool.poetry]
name = "jg.plucker"
version = "0.0"
description = "Junior Guru scrapers"
authors = ["Honza Javorek <honza@junior.guru>"]
license = "AGPL-3.0-only"
readme = "README.md"
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/plucker/"
packages = [{ include = "jg" }]

[tool.poetry.scripts]
plucker = "jg.plucker.cli:main"

[tool.poetry.dependencies]
python = "3.12.*"
apify = { version = "3.0.1", extras = ["scrapy"] }
apify-client = "2.1.0"  # deployment of actors, monitoring, automation
apify-shared = "*"  # importing a few enums
click = "8.3.0"
diskcache = "5.6.3"
favicon = "0.7.0"
ics = { version = "0.8.0.dev0", allow-prereleases = true }
linkedin-api = "2.3.1"
lxml = "5.3.0"
pillow = "11.3.0"
pydantic = "2.11.10"
scrapy = "2.13.3"
teemup = "1.2.1"

[tool.poetry.group.dev.dependencies]
cookiecutter = "2.6.0"
pytest = "8.4.2"
pytest-ruff = "0.5"
ruff = "0.13.*"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"
filterwarnings = [
    "ignore:twisted.web.http.HTTPClient was deprecated:DeprecationWarning",  # scrapy
    "ignore:There is no current event loop:DeprecationWarning",  # apify
]

[tool.ruff]
target-version = "py312"
extend-exclude = ["scraper_template"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
