[project]
name = "jg.plucker"
version = "0.0.1"
description = "Junior Guru scrapers"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "apify[scrapy]>=3.0.2",
    "apify-client>=2.1.0",  # deployment of actors, monitoring, automation
    "apify-shared",  # importing a few enums
    "click>=8.3.0",
    "diskcache>=5.6.3",
    "favicon>=0.7.0",
    "ics>=0.8.0.dev0",
    "lxml>=5.3.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.10",
    "scrapy>=2.13.3",
    "teemup>=1.2.1",
]

[project.urls]
repository = "https://github.com/juniorguru/plucker"

[project.scripts]
plucker = "jg.plucker.cli:main"

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "pytest>=8.4.2",
    "pytest-ruff>=0.5",
    "ruff>=0.13.0",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"
filterwarnings = [
    "ignore:twisted.web.http.HTTPClient was deprecated:DeprecationWarning",  # scrapy
    "ignore:There is no current event loop:DeprecationWarning",  # apify
]

[tool.ruff]
target-version = "py313"
extend-exclude = ["scraper_template"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["uv_build>=0.8.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.plucker"
