[project]
name = "jg.plucker"
version = "0.0.1"
description = "Junior Guru scrapers"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "honza@junior.guru"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "apify[scrapy]>=3.3.2",
    "apify-client>=2.5.0",  # deployment of actors, monitoring, automation
    "apify-shared",  # importing a few enums
    "click>=8.3.2",
    "diskcache>=5.6.3",
    "favicon>=0.7.0",
    "ics>=0.8.0.dev0",
    "lxml>=6.0.4",
    "pillow>=12.2.0",
    "pydantic>=2.13.0",
    "scrapy>=2.15.0",
    "teemup>=1.2.1",
]

[project.urls]
homepage = "https://junior.guru/"
repository = "https://github.com/juniorguru/plucker"

[project.scripts]
plucker = "jg.plucker.cli:main"

[dependency-groups]
dev = [
    "cookiecutter>=2.7.1",
    "pytest>=9.0.3",
    "pytest-ruff>=0.5",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"

[tool.ruff]
target-version = "py313"
extend-exclude = ["scraper_template"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "jg.plucker"
